# Battleship

./: .gitignore  Makefile  README.md  battleship.py  main.py  pyproject.toml  requirements.txt
client/: battleship_terminal.py  board.py  client.py
src/battleship/: api.py  notes  schema.py  urls.py  utils.py
src/battleship/api/: game_views.py  player_views.py  ship_views.py  urls.py
src/battleship/models/: database.py  game.py  guess.py  player.py  ship.py
src/battleship/websocket/: game_handlers.py  handler_map.py  websocket_api.py
test/: conftest.py  test_api.py  test_utils.py
test/integration/: conftest.py  test_integration.py
